--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "^15.5.7",
     "react": "^19.0.1",
-    "react-dom": "^19.0.1",
-    "next": "15.3.6"
+    "react-dom": "^19.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
